@startuml

Interface1 <.. A
Interface2 <.. A
Interface1 <.. C
Interface3 <.. C
interface Interface1{
    void operater1();
}
interface Interface2{
    void operater2();
    void operater3();
}
interface Interface3{
    void operater4();
    void operater5();
}
Interface1 <|.. B
Interface2 <|.. B
Interface1 <|.. D
Interface3 <|.. D

@enduml